<resources>
    <string name="app_name">Мои рецепты</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world">Привет Мир!</string>
    <string name="action_settings">Настройки</string>
    <string name="app_name_main">Мои рецепты</string>
    <string name="appbar_name_salads">Салаты</string>
    <string name="categories">Категории</string>
    <string name="favorites">Избранное</string>
    <string name="add_recipe">Добавить рецепт</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О программе</string>
    <string name="saladTxt">Салаты</string>
    <string name="salad_descr">Салаты</string>
    <string name="add_recipe_logo">Добавить\nрецепт</string>
    <string name="last_recipes_logo">Последние\nрецепты</string>
    <string name="name_saladButton">Салаты</string>
    <string name="name_soupButton">Супы</string>
    <string name="name_meatButton">Мясо</string>
    <string name="name_chickenButton">Курица</string>
    <string name="name_vtoroeButton">Второе</string>
    <string name="name_fishButton">Рыба</string>
    <string name="name_vegetablesButton">Овощи</string>
    <string name="name_vypechkaButton">Выпечка</string>
    <string name="name_drinksButton">Напитки</string>
    <string name="name_prazdnikiButton">Праздники</string>
    <string name="add_recipe_bar_name">Добавить рецепт</string>
    <string name="fab">fab</string>
    <string name="favorites_toolbar_name">Избранное</string>
    <string name="deleted_menu_item">Удалённые</string>
    <string name="add_category_view">Категория</string>
    <string name="add_recipe_view">Название</string>
    <string name="add_recipe_toolbar">Добавить рецепт</string>
    <string name="second_activity_text">damn</string>
    <string name="ingridients_txt">Ингридиенты</string>
    <string name="instruction_txt">Инструкция</string>
    <string name="time_exp_txt">Время</string>
</resources>