<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categories_menu_button"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/categories" />
        <item
            android:id="@+id/favorites_menu_button"
            android:icon="@drawable/ic_image"
            android:title="@string/favorites" />
        <item
            android:id="@+id/addrecipe_menu_button"
            android:icon="@drawable/ic_place"
            android:title="@string/add_recipe" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/deleted_menu_item" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>