<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/add_recipe_toolbar" />

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/drawerLayout">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/category_input_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:layout_toRightOf="@+id/add_category_TextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_category_view"
                android:id="@+id/add_category_TextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/category_input_txt"
                android:layout_alignTop="@+id/category_input_txt"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_recipe_view"
                android:id="@+id/add_recipe_name"
                android:textStyle="bold"
                android:layout_alignBottom="@+id/recipe_name"
                android:layout_below="@+id/category_input_txt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name"
                android:layout_below="@+id/category_input_txt"
                android:layout_toRightOf="@+id/add_category_TextView"
                android:layout_toEndOf="@+id/add_category_TextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:inputType="textAutoComplete" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:id="@+id/add_ingredients_txt"
                android:layout_below="@+id/ingridient_txt_view"
                android:layout_alignLeft="@+id/ingridient_txt_view"
                android:layout_alignStart="@+id/ingridient_txt_view"
                android:layout_alignRight="@+id/recipe_name"
                android:layout_alignEnd="@+id/recipe_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingridients_txt"
                android:textStyle="bold"
                android:id="@+id/ingridient_txt_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="34dp"
                android:layout_below="@+id/add_recipe_name"
                android:layout_alignLeft="@+id/add_recipe_name"
                android:layout_alignStart="@+id/add_recipe_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction_txt"
                android:textStyle="bold"
                android:id="@+id/instruction_textview"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/ingridient_txt_view"
                android:layout_alignStart="@+id/ingridient_txt_view" />



            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_instructions_txt"
                android:layout_below="@+id/instruction_textview"
                android:layout_alignLeft="@+id/instruction_textview"
                android:layout_alignStart="@+id/instruction_textview"
                android:layout_alignRight="@+id/add_ingredients_txt"
                android:layout_alignEnd="@+id/add_ingredients_txt"
                android:inputType="textImeMultiLine" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сохранить рецепт"
                android:id="@+id/saveRecipeButton"
                android:layout_below="@+id/add_instructions_txt"
                android:layout_alignLeft="@+id/add_instructions_txt"
                android:layout_alignStart="@+id/add_instructions_txt"
                android:layout_marginTop="49dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Показать"
                android:id="@+id/btnRead"
                android:layout_alignTop="@+id/saveRecipeButton"
                android:layout_toRightOf="@+id/saveRecipeButton"
                android:layout_alignRight="@+id/add_instructions_txt"
                android:layout_alignEnd="@+id/add_instructions_txt" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Очистить"
                android:id="@+id/btnClear"
                android:layout_below="@+id/saveRecipeButton"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer">

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>